// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dot-artist match example snapshot 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontWeight": "normal",
              "text": "Sub",
              "textAlign": "center",
              "textBaseline": "top",
            },
            "type": "text",
          },
          Object {
            "attrs": Object {
              "radius": 2,
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          Object {
            "attrs": Object {
              "fill": "purple",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontWeight": "normal",
              "text": "a1",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "blue",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "blue",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "b1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "n1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "end",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a2",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`dot-artist renders different arrow type 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {
          "fill": "lightyellow",
          "stroke": "transparent",
        },
        "class": "dot__frame-bg",
        "type": "rect",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "fill": "lightyellow",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {},
        "children": Array [
          Object {
            "attrs": Object {
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          Object {
            "attrs": Object {
              "lineCap": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "b1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "n1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "end",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a2",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "Graph Label",
          "textAlign": "center",
          "textBaseline": "top",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`dot-artist renders different node type 1`] = `
Object {
  "mark": Object {
    "attrs": Object {},
    "children": Array [
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "cx": 31,
                "cy": 25,
                "radius": 2,
                "rx": 33,
                "ry": 15,
                "stroke": "#3b4044",
                "x": 31,
                "y": 25,
              },
              "type": "ellipse",
            },
          ],
          "type": "group",
        },
        "symbolBounds": Object {
          "bottom": 40,
          "height": 30,
          "left": 21,
          "right": 41,
          "top": 10,
          "width": 66,
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "ellipse",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "r": 29,
                "radius": 2,
                "stroke": "#3b4044",
                "x": 109,
                "y": 25,
              },
              "type": "circle",
            },
          ],
          "type": "group",
        },
        "symbolBounds": Object {
          "bottom": 54,
          "height": 31,
          "left": 99,
          "right": 119,
          "top": -4,
          "width": 58,
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "circle",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {},
        "mark": Object {
          "attrs": Object {},
          "children": Array [
            Object {
              "attrs": Object {
                "path": Array [
                  Array [
                    "M",
                    195.5,
                    25,
                  ],
                  Array [
                    "m",
                    -48.68181818181818,
                    0,
                  ],
                  Array [
                    "l",
                    48.68181818181818,
                    17,
                  ],
                  Array [
                    "l",
                    48.68181818181818,
                    -17,
                  ],
                  Array [
                    "l",
                    -48.68181818181818,
                    -17,
                  ],
                  Array [
                    "Z",
                  ],
                ],
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "path",
            },
          ],
          "type": "group",
        },
        "symbolBounds": Object {
          "bottom": 42,
          "height": 34,
          "left": 178.3181818181818,
          "right": 212.6818181818182,
          "top": 8,
          "width": 97.36363636363636,
        },
        "type": "symbol",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "diamond",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      Object {
        "attrs": Object {
          "fill": "transparent",
          "radius": 2,
          "stroke": "transparent",
        },
        "type": "rect",
      },
      Object {
        "attrs": Object {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "plaintext",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;
